fix(head): use correct para spacing in richtext areas

--- a/applications/head/src/components/styles/RichText.module.scss
+++ b/applications/head/src/components/styles/RichText.module.scss
@@ -13,6 +13,10 @@
     margin-left: 8px;
   }
 
+  p{
+    margin-bottom: 0.75em;
+  }
+
   ul {
     list-style: none;
     padding-left: 1.5rem;
